# layered-crate

./: Cargo.toml  README.md  Taskfile.yml
.github/steps/setup/: action.yml
.github/workflows/: pr.yml
src/: lib.rs
tests/: macrotest.rs  trybuild.rs
tests/expand/: circular_deps_itself.expanded.rs  dep_not_found.expanded.rs  dep_not_found.rs  keeps_unrelated.expanded.rs  keeps_unrelated.rs  no_export_non_pub.expanded.rs  no_export_non_pub.rs  simple.expanded.rs  simple.rs
tests/fixtures/: Cargo.toml  lib.rs
tests/fixtures/src/: api.rs  sub_system_2.rs
tests/fixtures/src/sub_system_1/: foo.rs  mod.rs
tests/fixtures/tests/: import_test.rs
tests/ui/: cir_deps.fail.rs  cir_deps.fail.stderr  cir_deps_itself.fail.rs  cir_deps_itself.fail.stderr  dep_not_found.fail.stderr  dep_order.fail.rs  dep_order.fail.stderr  import_warnings.fail.rs  import_warnings.fail.stderr  module_order.fail.rs  module_order.fail.stderr  not_declared.fail.rs  not_declared.fail.stderr
tests/ui/src/: w.rs  x.rs  y.rs  z.rs
