[package]
name = "layered-crate"
version = "0.1.1"
edition = "2024"
description = "Proc-macro to declare internal dependencies amongst modules inside a crate"
repository = "https://github/Pistonite/layered_crate"
license = "MIT"
authors = ["Pistonight <pistonknight@outlook.com>"]
keywords = ["proc-macro", "layered", "crate", "dependencies", "module"]
categories = ["rust-patterns", "development-tools", "development-tools::build-utils", "development-tools::testing"]
exclude = [
    ".github/**/*",
    "tests/**/*",
    "README.md",
    "Taskfile.yml"
]

[dependencies]
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = { version = "2.0.101", features = ["full"] }

[dev-dependencies]
macrotest = "1.1.0"
trybuild = "1.0.105"

[lib]
proc-macro = true

[workspace]
members = [
    "./tests/fixtures",
]
